--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -32,7 +32,7 @@ body
         font-size: 40px
         font-weight: 800
         text-transform: uppercase
-        line-height: 64px
+        line-height: 140%
         &_big
             font-size: 48px
             line-height: 58px
@@ -112,6 +112,7 @@ body
     text-transform: uppercase
     text-decoration: none
     text-align: center
+    user-select: none
     color: $main_black
     padding: 18px
     font-size: 20px
@@ -181,7 +182,7 @@ body
     margin: 0 auto
     position: relative
     padding: 0px 15px
-    z-index: 2
+    z-index: 3
 
 .header, .footer
     flex-grow: 0
@@ -218,6 +219,11 @@ body
 
 .logo
     display: block
+    max-width: 135px
+    height: auto
+    &__img
+        width: 100%
+        height: auto
 
 .nav
     width: 100%
@@ -251,6 +257,108 @@ body
                 opacity: 1
         &:hover
             color: $main_yellow
+
+.burger
+    display: none
+    height: 24px
+    width: 24px
+    span, &::before, &::after
+        content: ''
+        display: inline-block
+        width: 24px
+        height: 3px
+        background-color: $main_black
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        transition:  top .15s ease-in .15s, transform .15s ease-in 0s, opacity .1s ease-in .15s
+    &::before
+        top: calc( 9px + 50% )
+    &::after
+        top: calc( -9px + 50% )
+    &.active
+        span, &::before, &::after
+            transform: translate(-50%, -50%)
+            top: 50%
+            transition:  top .15s ease-in 0s, transform .15s ease-in .15s, opacity .15s ease-in .1s
+        span
+            opacity: 0
+        &::before
+            transform: translate(-50%, -50%) rotate(45deg)
+        &::after
+            transform: translate(-50%, -50%) rotate(-45deg)
+
+.menu
+    position: fixed
+    height: 100vh
+    width: 100%
+    background-color: #fff
+    top: 0
+    left: 0
+    z-index: 1
+    transform-origin: left top
+    &::before
+        transition-duration: .35s
+        transition-timing-function: ease-out
+        content: ''
+        display: block
+        height: 101vh
+        position: absolute
+        border-radius: 30px
+        background-color: $main_yellow
+        right: -115px
+        top: -8px
+        width: 200px
+        transform: rotate(4deg)
+        transform-origin: left top
+        transition-delay: .1s
+    &__container
+        max-width: 310px
+        padding: 0px 0px 28px
+        width: 100%
+        margin: 0 auto
+        height: 100%
+        display: flex
+        flex-direction: column
+        align-items: stretch
+        justify-content: center
+        position: relative
+        .nav
+            &__list
+                flex-direction: column
+                align-items: flex-start
+            &__link
+                font-size: 42px
+                line-height: normal
+            &__item
+                display: inline-block
+        .nav__item + .nav__item
+            margin-top: 40px
+        .button
+            border-radius: 4px
+            border: 2px solid $main_black
+            font-size: 18px
+            padding: 18px 15px
+            position: absolute
+            bottom: 48px
+            width: 100%
+            &::before
+                position: relative
+                vertical-align: middle
+                transform: translateY(-2px)
+                margin-right: 12px
+            &:hover, &:active
+                border: 2px solid $main_yellow
+                
+                
+            // margin-top: auto
+    &:not(.active)
+        transform: translateX(100%) rotate(-30deg)
+        visibility: hidden
+        pointer-events: none
+        &::before
+            transform: rotate(-9deg)
 
 .hero
     &__slide
@@ -438,8 +546,7 @@ body
         grid-gap: 35px
         margin-top: 30px
     &__item-img
-        height: 100%
-        max-height: 160px
+        height: 160px
         width: 100%
         border-radius: 8px
         overflow: hidden
@@ -471,14 +578,16 @@ body
         margin-top: 5px
 
 .footer
+    padding-bottom: 80px
     &__wrap
         display: flex
         align-items: center
         justify-content: space-between
-        padding-bottom: 80px
+        position: relative
     &__copyright
         font-size: 13px
         font-weight: 600
+        white-space: nowrap
 
 
 //
@@ -611,6 +720,7 @@ body
         &_float
             float: right
             margin-left: 70px
+            margin-bottom: 10px
         img
             width: 100%
             height: 100%
@@ -649,7 +759,7 @@ body
         margin-top: 35px
         display: grid
         grid-template-columns: 1fr 360px
-        grid-column-gap: 60px
+        grid-gap: 55px 60px
     &__news
         display: grid
         grid-template-columns: 1fr
@@ -837,6 +947,7 @@ body
     box-shadow: 0px 28px 52px rgba(0, 0, 0, 0.19)
     border-radius: 12px
     max-width: 990px
+    overflow-y: auto
     &:not(.active)
         position: absolute
         transform: translateY(-50px)
@@ -855,6 +966,7 @@ body
         width: 30px
         top: 10px
         right: 10px
+        z-index: 3
         &::before, &::after
             content: ''
             display: inline-block
@@ -916,6 +1028,7 @@ body
         align-items: center
         justify-content: center
         background-color: rgba(255, 255, 255, 0.9)
+        padding: 0px 20px
         &:not(.active)
             opacity: 0
             pointer-events: none
@@ -930,8 +1043,12 @@ body
         display: flex
         align-items: stretch
         justify-content: center
+        & + &
+            margin-top: 35px
         &_vert
             flex-direction: column
             align-items: center
         .button
             margin-top: 0
+    .contacts__label
+        margin-bottom: 0
