--- a/zillion/sass/media.sass
+++ b/zillion/sass/media.sass
@@ -661,9 +661,10 @@ $bg_white: #f8f8f8
             grid-template-rows: 270px repeat(2, 100px)
 
     .bandito
-        height: 350px !important
-        // padding: 20px 0px
-        background-size: contain
+        padding: 20px 0px
+        &_blocked
+            height: 350px !important
+            background-size: contain
         &__col
             padding: 0px 10px
         &__item
